Mostrando los nombres de los pokemones en consola

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <header>
+      <nav></nav>
+    </header>
+    <div id ="inicio">
+      BIENVENIDO A POKEINFO
+    </div>
+    <div id="panel">
+      <p id="names"></p>
+    </div>
   
   <script src="./data/pokemon/pokemon.js"></script>
     
