--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,16 @@
       <h1>BIENVENIDO A POKEINFO</h1>
       <p>Somos Pokeinfo, la página web que te pondrá al día respecto a tus pokemones favoritos.</p>
     </div>
+    
     <div id="panel">
-      <p id="names"></p>
+      <button id="ordspawn">Ordenar por N°Apariciones</button>
+      <p id="cards"></p>
     </div>
-  
+    <footer>Derechos reservados</footer>
+ 
   <script src="./data/pokemon/pokemon.js"></script>
     
-    <script src="data.js"></script>
     <script src="main.js"></script>
+    <script src="data.js"></script>
   </body>
 </html>
