buscanos en facebook

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <div id ="inicio">
       <h1>BIENVENIDO A POKEINFO</h1>
       <p>Somos Pokeinfo, la página web que te pondrá al día respecto a tus pokemones favoritos.</p>
+      <p>Búscanos en facebook</p>
     </div>
     <div id="panel">
       <button id ="ordspawnA">Ordenar pors numero de apariciones Ascendente</button>
