se realizo la funcion ordenar sin ningun error

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
       <p>Búscanos en facebook</p>
     </div>
     <div id="panel">
+        <button id ="ordsnameA">Ordenar por nombre ascendente</button>
+        <button id= "ordsnameD">Ordenar por nombre descendente</button>
       <button id ="ordspawnA">Ordenar pors numero de apariciones Ascendente</button>
       <button id= "ordspawnD">Ordenar por numero de apariciones Descendente</button>
       <div id="cards"> </div>      
