Obteniendo tipos de pokemones-Code Review Lulu

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         <button id= "ordsnameD">Ordenar por nombre descendente</button>
       <button id ="ordspawnA">Ordenar pors numero de apariciones Ascendente</button>
       <button id= "ordspawnD">Ordenar por numero de apariciones Descendente</button>
+      <button id= "filtrarType">Filtro</button>
       <div id="cards"> </div>      
     </div>   
     <footer>Derechos reservados</footer> 
