--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,14 @@
         <button id= "ordsnameD">Ordenar por nombre descendente</button>
       <button id ="ordspawnA">Ordenar pors numero de apariciones Ascendente</button>
       <button id= "ordspawnD">Ordenar por numero de apariciones Descendente</button>
-      <button id= "filtrarType">Filtro</button>
-      <div id="cards"> </div>      
-    </div>   
-    <footer>Derechos reservados</footer> 
-  
+      <select id="type">
+      </select>
+      <div id="cards"> </div>
+    </div>
+    <footer>Derechos reservados</footer>
+
   <script src="./data/pokemon/pokemon.js"></script>
-    
+
     <script src="data.js"></script>
     <script src="main.js"></script>
   </body>
