Calculando max/min avg spawns

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,15 @@
       <p>Búscanos en facebook</p>
     </div>
     <div id="panel">
-      <button id ="ordsnameA">Ordenar por nombre ascendente</button>
-      <button id= "ordsnameD">Ordenar por nombre descendente</button>
-      <button id ="ordspawnA">Ordenar pors numero de apariciones Ascendente</button>
-      <button id= "ordspawnD">Ordenar por numero de apariciones Descendente</button>
+      <button id ="ordsname-a">Ordenar por nombre ascendente</button>
+      <button id= "ordsname-d">Ordenar por nombre descendente</button>
+      <button id ="ordspawn-a">Ordenar pors numero de apariciones Ascendente</button>
+      <button id= "ordspawn-d">Ordenar por numero de apariciones Descendente</button>
       <select name="type" id="type"></select>
+      <p>Máximo N°Apariciones</p>
+      <p id="max-avg"></p>
+      <p>Mínimo N°Apariciones</p>
+      <p id="min-avg">
       <div id="cards"> </div>
     </div>
     <footer>Derechos reservados</footer>
