Diseño del header y el nav

--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,47 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Lovers</title>
+    <link rel="stylesheet" href="fontello.css" />
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
-    <div id="root"></div>
-    <header>
-      <div class="logo">
-        POKEMON
+       <header>
+      <div class="contenedor"> 
+        <h1>POKEINFO</h1>    
+        <input type="checkbox" id="menu-bar">
+        <label class="icon-menu" for="menu-bar"></label>
+        <nav class="navbar-menu">
+          <ul>
+            <li>Inicio</li>
+            <li>Cards</li>
+            <li>Estadisticas </li>
+          </ul>
+        </nav>
       </div>
-      <ul>
-        <li>Inicio</li>
-        <li>Panel</li>
-        <li>Estadísticas</li>
-      </ul>
     </header>
+
+<main>
+  <section id= "banner">
+    <img src="https://images7.alphacoders.com/661/661975.png">
+    <div class="contenedor">
+    <h2>
+      Todo lo quieras saber de tus pokemones
+    </h2>
+    <button name="Empezar">Empezar</button>
+    </div>
+
+  </section>
+</main>
+
+
+
+
+
+
+
     <div id ="inicio">
       <h1>BIENVENIDO A POKEINFO</h1>
       <p>Somos Pokeinfo, la página web que te pondrá al día respecto a tus pokemones favoritos.</p>
