cambios en las identaciones y mejoramiento de las descripciones

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 <main>
   <section class = "banner">
-    <img src="https://images7.alphacoders.com/661/661975.png">
+    <img src="img/fondo.jpg">
     <div class="contenedor">
       <p>
         Todo lo que quieres saber de los pokemones.
@@ -49,32 +49,15 @@
       </div>
 
     </div>
-
-
-
   </section>
-
-</main>
-
-
-
-
-
-
-
-    <div id ="inicio">
-    </div>
-    <div id="panel">
-      <button id ="ordsname-a">Ordenar por nombre ascendente</button>
-      <button id= "ordsname-d">Ordenar por nombre descendente</button>
-      <button id ="ordspawn-a">Ordenar pors numero de apariciones Ascendente</button>
-      <button id= "ordspawn-d">Ordenar por numero de apariciones Descendente</button>
-      <select name="type" id="type"></select>
-      <p>Máximo N°Apariciones</p>
+  <p>Máximo N°Apariciones</p>
       <p id="max-avg"></p>
       <p>Mínimo N°Apariciones</p>
       <p id="min-avg">
-     
+      <p>Promedio</p>
+      <p id="Promedio">
+      <p id="display-types"></p>  
+    </main>           
     </div>
     <footer>Derechos reservados</footer>
     <script src="./data/pokemon/pokemon.js"></script>
