se modifico datos en el eslint

--- a/src/index.html
+++ b/src/index.html
@@ -50,15 +50,17 @@
 
     </div>
   </section>
+  <div>
   <p>Máximo N°Apariciones</p>
       <p id="max-avg"></p>
       <p>Mínimo N°Apariciones</p>
-      <p id="min-avg">
+      <p id="min-avg"> </p>
       <p>Promedio</p>
-      <p id="Promedio">
-      <p id="display-types"></p>  
+      <p id="Promedio"> </p>
+      <p id="display-types"></p> 
+    </div> 
     </main>           
-    </div>
+   
     <footer>Derechos reservados</footer>
     <script src="./data/pokemon/pokemon.js"></script>
     <script src="data.js"></script>
