--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,7 @@
           <button id= "ordspawn-d">Ordenar por numero de apariciones Descendente</button>
           <select name="type" id="type"></select>     
       </div>
-      <div id ="cards" class="card-wrapper">
-      </div>
-
+      <div id ="cards" class="card-wrapper"></div>
     </div>
   </section>
   <div>
@@ -58,8 +56,8 @@
       <p>Promedio</p>
       <p id="Promedio"> </p>
       <p id="display-types"></p> 
-    </div> 
-    </main>           
+  </div> 
+</main>           
    
     <footer>Derechos reservados</footer>
     <script src="./data/pokemon/pokemon.js"></script>
