Cambios sobre el diseño, se modificaron los colores de los botones

--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,18 @@
   </header>
   <main>
     <section class = "banner" id= "home">
-      <img src="img/fondo.jpg">
+      <img src="https://images8.alphacoders.com/648/thumb-1920-648607.png">
       <div class="contenedor">
-        <p>
+        <p >
             Encuentra la información de tus pokemones favoritos.
         </p>
+        <br>
         <a  class ="btn-empezar" href="#sect-card">Empezar</a>
       </div>
     </section>
     <section id="sect-card" class="section-card">
       <div class ="contenedor-cards">
-        <p class="heading">Atrapa a tus pokemones</p>
+        <p class="heading">Todo lo que quieras saber de tus pokemones</p>
         <div class="process-data">
           <div>
               <p>Ordenar por Nombre</p>
@@ -77,7 +78,7 @@
       </div>     
     </section>    
   </main>           
-    <footer>Derechos reservados - Liz Escobar & Marjorie Herrera</footer>
+    <footer>Derechos reservados - Liz Rojas & Marjorie Herrera</footer>
     <script src="./data/pokemon/pokemon.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
