afinamiento de test

--- a/src/index.html
+++ b/src/index.html
@@ -67,9 +67,9 @@
               <p>Máximo N°Apariciones</p>
               <p id="max-avg"></p>
               <p>Mínimo N°Apariciones</p>
-              <p id="min-avg">
+              <p id="min-avg"> </p>
               <p>Promedio</p>
-              <p id="Promedio">
+              <p id="Promedio"> </p>
           </div>
           <div>
               <h1>Cantidad de pokemones según tipo</h1>       
